fix for header spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -50,9 +50,10 @@ textarea {
     border-width: 4px;
 }
 
-.spacer-30 {
-    height: 30px;
-}
+.spacer-5  { height:  5px; }
+.spacer-10 { height: 10px; }
+.spacer-15 { height: 15px; }
+.spacer-30 { height: 30px; }
 
 .bottom-spacing {
     margin-bottom: 10px;
